--- a/AplikasiPendaftaranSiswa/nbproject/project.properties
+++ b/AplikasiPendaftaranSiswa/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AplikasiPendaftaranSiswa
+application.vendor=achma
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/AplikasiPendaftaranSiswa.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplikasiPendaftaranSiswa
+endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.8.2.jar=library\\commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=library\\commons-collections-3.2.1.jar
@@ -93,7 +95,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AplikasiPendaftaranSiswa
-main.class=
+main.class=code.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
